--- a/BulkSenderSMTP/BulkSenderSMTP.csproj
+++ b/BulkSenderSMTP/BulkSenderSMTP.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MailKit" Version="2.14.0" />
+  </ItemGroup>
+
 </Project>
