--- a/BulkSenderSMTP/BulkSenderSMTP.csproj
+++ b/BulkSenderSMTP/BulkSenderSMTP.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Img\mail-send.ico" />
+    <None Remove="Img\mail-send.png" />
     <None Remove="Img\tenor-2.gif" />
   </ItemGroup>
 
@@ -16,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Img\mail-send.ico" />
     <Resource Include="Img\tenor-2.gif">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
